# campaign-admin

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  alembic.ini  docker-compose.yml  docker-entrypoint.sh  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml  codeql.yml
app/: config.py  db.py  main.py  markdown.py  models.py  schemas.py  security.py
app/routes/: campaigns.py  checklist.py  logs.py  markdown.py  steps.py
app/static/: app.css
app/templates/: base.html  index.html
app/templates/campaigns/: edit.html  new.html  show.html
app/templates/partials/: checklist.html  checklist_item.html  log_entry.html  logs.html  overview.html  step_drawer.html  steps.html
migrations/: env.py
migrations/versions/: 0001_initial.py
tests/: conftest.py  test_campaigns_routes.py  test_checklist_routes.py  test_config.py  test_csrf.py  test_db.py  test_health.py  test_logs_routes.py  test_markdown.py  test_models.py  test_security.py  test_steps_routes.py
