[project]
name = "campaign-admin"
version = "0.1.0"
description = "Local admin tool for managing marketing/launch campaigns"
requires-python = ">=3.12"
license = { text = "PolyForm-Noncommercial-1.0.0" }
authors = [{ name = "Erico Campos" }]
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "jinja2>=3.1",
    "python-multipart>=0.0.9",
    "markdown2>=2.4",
    "bleach>=6.1",
    "starlette-csrf>=3.0",
    "python-slugify>=8.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
    "ruff>=0.4",
    "beautifulsoup4>=4.12",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "C4"]
ignore = ["B008"]  # FastAPI uses Depends/Form in argument defaults by design

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.uv]
package = false
